@@ -120,9 +120,6 @@ DICT<GnomeCmdUserActionFunc> GnomeCmdUserActions::action_func;
 DICT<GnomeCmdUserActionFunc> GnomeCmdUserActions::action_name;
 
 
-#define     NN_(x)      (x)
-
-
 struct UserActionData
 {
     GnomeCmdUserActionFunc func;
@@ -132,74 +129,74 @@ struct UserActionData
 
 
 static UserActionData user_actions_data[] = {
-                                             {bookmarks_add_current, "bookmarks.add_current", NN_("Bookmark current directory")},
-                                             {bookmarks_edit, "bookmarks.edit", NN_("Manage bookmarks")},
-                                             {bookmarks_goto, "bookmarks.goto", NN_("Go to bookmarked location")},
-                                             {command_open_nautilus, "command.open_folder", NN_("Open folder")},
-                                             {command_open_terminal, "command.open_terminal", NN_("Open terminal")},
-                                             {command_root_mode, "command.root_mode", NN_("Start GNOME Commander as root")},
-                                             {connections_close_current, "connections.close", NN_("Close connection")},
-                                             {connections_new, "connections.new", NN_("New connection")},
-                                             {connections_open, "connections.open", NN_("Open connection")},
-                                             {edit_cap_copy, "edit.copy", NN_("Copy")},
-                                             {edit_copy_fnames, "edit.copy_filenames", NN_("Copy file names")},
-                                             {edit_cap_cut, "edit.cut", NN_("Cut")},
-                                             {file_delete, "edit.delete", NN_("Delete")},
-                                             {edit_filter, "edit.filter", NN_("Show user defined files")},
-                                             {edit_cap_paste, "edit.paste", NN_("Paste")},
-                                             {edit_quick_search, "edit.quick_search", NN_("Quick search")},
-                                             {edit_search, "edit.search", NN_("Search")},
-                                             {file_advrename, "file.advrename", NN_("Advanced rename tool")},
-                                             {file_chmod, "file.chmod", NN_("Change permissions")},
-                                             {file_chown, "file.chown", NN_("Change owner/group")},
-                                             {file_copy, "file.copy", NN_("Copy files")},
-                                             {file_create_symlink, "file.create_symlink", NN_("Create symbolic link")},
-                                             {file_delete, "file.delete", NN_("Delete files")},
-                                             {file_diff, "file.diff", NN_("Compare files (diff)")},
-                                             {file_edit, "file.edit", NN_("Edit file")},
-                                             {file_edit_new_doc, "file.edit_new_doc", NN_("Edit a new file")},
-                                             {file_exit, "file.exit", NN_("Quit")},
-                                             {file_external_view, "file.external_view", NN_("View with external viewer")},
-                                             {file_internal_view, "file.internal_view", NN_("View with internal viewer")},
-                                             {file_mkdir, "file.mkdir", NN_("Create directory")},
-                                             {file_move, "file.move", NN_("Move files")},
-                                             {file_properties, "file.properties", NN_("Properties")},
-                                             {file_rename, "file.rename", NN_("Rename files")},
+                                             {bookmarks_add_current, "bookmarks.add_current", N_("Bookmark current directory")},
+                                             {bookmarks_edit, "bookmarks.edit", N_("Manage bookmarks")},
+                                             {bookmarks_goto, "bookmarks.goto", N_("Go to bookmarked location")},
+                                             {command_open_nautilus, "command.open_folder", N_("Open folder")},
+                                             {command_open_terminal, "command.open_terminal", N_("Open terminal")},
+                                             {command_root_mode, "command.root_mode", N_("Start GNOME Commander as root")},
+                                             {connections_close_current, "connections.close", N_("Close connection")},
+                                             {connections_new, "connections.new", N_("New connection")},
+                                             {connections_open, "connections.open", N_("Open connection")},
+                                             {edit_cap_copy, "edit.copy", N_("Copy")},
+                                             {edit_copy_fnames, "edit.copy_filenames", N_("Copy file names")},
+                                             {edit_cap_cut, "edit.cut", N_("Cut")},
+                                             {file_delete, "edit.delete", N_("Delete")},
+                                             {edit_filter, "edit.filter", N_("Show user defined files")},
+                                             {edit_cap_paste, "edit.paste", N_("Paste")},
+                                             {edit_quick_search, "edit.quick_search", N_("Quick search")},
+                                             {edit_search, "edit.search", N_("Search")},
+                                             {file_advrename, "file.advrename", N_("Advanced rename tool")},
+                                             {file_chmod, "file.chmod", N_("Change permissions")},
+                                             {file_chown, "file.chown", N_("Change owner/group")},
+                                             {file_copy, "file.copy", N_("Copy files")},
+                                             {file_create_symlink, "file.create_symlink", N_("Create symbolic link")},
+                                             {file_delete, "file.delete", N_("Delete files")},
+                                             {file_diff, "file.diff", N_("Compare files (diff)")},
+                                             {file_edit, "file.edit", N_("Edit file")},
+                                             {file_edit_new_doc, "file.edit_new_doc", N_("Edit a new file")},
+                                             {file_exit, "file.exit", N_("Quit")},
+                                             {file_external_view, "file.external_view", N_("View with external viewer")},
+                                             {file_internal_view, "file.internal_view", N_("View with internal viewer")},
+                                             {file_mkdir, "file.mkdir", N_("Create directory")},
+                                             {file_move, "file.move", N_("Move files")},
+                                             {file_properties, "file.properties", N_("Properties")},
+                                             {file_rename, "file.rename", N_("Rename files")},
                                              // {file_run, "file.run"},
-                                             {file_sendto, "file.sendto", NN_("Send files")},
-                                             {file_sync_dirs, "file.synchronize_directories", NN_("Synchonize directories")},
+                                             {file_sendto, "file.sendto", N_("Send files")},
+                                             {file_sync_dirs, "file.synchronize_directories", N_("Synchonize directories")},
                                              // {file_umount, "file.umount"},
-                                             {file_view, "file.view", NN_("View file")},
-                                             {help_about, "help.about", NN_("About GNOME Commander")},
-                                             {help_help, "help.help", NN_("Help contents")},
-                                             {help_keyboard, "help.keyboard", NN_("Keyboard shortcuts")},
-                                             {help_problem, "help.problem", NN_("Report a problem")},
-                                             {help_web, "help.web", NN_("GNOME Commander on the web")},
-                                             {mark_compare_directories, "mark.compare_directories", NN_("Compare directories")},
-                                             {mark_invert_selection, "mark.invert", NN_("Invert selection")},
-                                             {mark_select_all, "mark.select_all", NN_("Select all")},
-                                             {mark_toggle, "mark.toggle", NN_("Toggle selection")},
-                                             {mark_toggle_and_step, "mark.toggle_and_step", NN_("Toggle selection and move cursor downward")},
-                                             {mark_unselect_all, "mark.unselect_all", NN_("Unselect all")},
-                                             {no_action, "no.action", NN_("Do nothing")},
-                                             {options_edit, "options.edit", NN_("Options")},
-                                             {options_edit_mime_types, "options.edit_mime_types", NN_("MIME types")},
-                                             {options_edit_shortcuts, "options.shortcuts", NN_("Keyboard shortcuts")},
-                                             {plugins_configure, "plugins.configure", NN_("Configure plugins")},
-                                             {plugins_execute_python, "plugins.execute_python", NN_("Execute python plugin")},
-                                             {view_back, "view.back", NN_("Go back one directory")},
-                                             {view_equal_panes, "view.equal_panes", NN_("Equal panel size")},
-                                             {view_first, "view.first", NN_("Go back to the first directory")},
-                                             {view_forward, "view.forward", NN_("Go forward one directory")},
-                                             {view_home, "view.home", NN_("Home directory")},
-                                             {view_in_active_pane, "view.in_active_pane", NN_("view.in_active_pane")},
-                                             {view_in_inactive_pane, "view.in_inactive_pane", NN_("view.in_inactive_pane")},
-                                             {view_in_left_pane, "view.in_left_pane", NN_("view.in_left_pane")},
-                                             {view_in_right_pane, "view.in_right_pane", NN_("view.in_right_pane")},
-                                             {view_last, "view.last", NN_("view.last")},
-                                             {view_refresh, "view.refresh", NN_("Refresh")},
-                                             {view_root, "view.root", NN_("Root directory")},
-                                             {view_up, "view.up", NN_("Up one directory")},
+                                             {file_view, "file.view", N_("View file")},
+                                             {help_about, "help.about", N_("About GNOME Commander")},
+                                             {help_help, "help.help", N_("Help contents")},
+                                             {help_keyboard, "help.keyboard", N_("Help on keyboard shortcuts")},
+                                             {help_problem, "help.problem", N_("Report a problem")},
+                                             {help_web, "help.web", N_("GNOME Commander on the web")},
+                                             {mark_compare_directories, "mark.compare_directories", N_("Compare directories")},
+                                             {mark_invert_selection, "mark.invert", N_("Invert selection")},
+                                             {mark_select_all, "mark.select_all", N_("Select all")},
+                                             {mark_toggle, "mark.toggle", N_("Toggle selection")},
+                                             {mark_toggle_and_step, "mark.toggle_and_step", N_("Toggle selection and move cursor downward")},
+                                             {mark_unselect_all, "mark.unselect_all", N_("Unselect all")},
+                                             {no_action, "no.action", N_("Do nothing")},
+                                             {options_edit, "options.edit", N_("Options")},
+                                             {options_edit_mime_types, "options.edit_mime_types", N_("MIME types")},
+                                             {options_edit_shortcuts, "options.shortcuts", N_("Keyboard shortcuts")},
+                                             {plugins_configure, "plugins.configure", N_("Configure plugins")},
+                                             {plugins_execute_python, "plugins.execute_python", N_("Execute python plugin")},
+                                             {view_back, "view.back", N_("Back one directory")},
+                                             {view_equal_panes, "view.equal_panes", N_("Equal panel size")},
+                                             {view_first, "view.first", N_("Back to the first directory")},
+                                             {view_forward, "view.forward", N_("Forward one directory")},
+                                             {view_home, "view.home", N_("Home directory")},
+                                             {view_in_active_pane, "view.in_active_pane", N_("Open directory in the active window")},
+                                             {view_in_inactive_pane, "view.in_inactive_pane", N_("Open directory in the inactive window")},
+                                             {view_in_left_pane, "view.in_left_pane", N_("Open directory in the left window")},
+                                             {view_in_right_pane, "view.in_right_pane", N_("Open directory in the right window")},
+                                             {view_last, "view.last", N_("Forward to the last directory")},
+                                             {view_refresh, "view.refresh", N_("Refresh")},
+                                             {view_root, "view.root", N_("Root directory")},
+                                             {view_up, "view.up", N_("Up one directory")},
                                             };
 
 
