@@ -1,3 +1,9 @@
+2008-05-12  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-search-dialog.cc:
+	* src/gnome-cmd-user-actions.cc:
+	i18n
+
 2008-05-09  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file-popmenu.cc:
